methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:19: error: type mismatch;
 found   : Unit
 required: Boolean
  pickupBaggle()
              ^