methods.slug.SlugHunting.scala.code


def hunt():Boolean ={
  while(!isOverBaggle()){
    if(isFacingWall()){
      return false
    }else{
      forward();
    if(getCouleurSol()==Color.green){
      backward();
      return true
    }else{
      backward();
      return false
    }
    }
}
  pickupBaggle()
}
  
